--- a/public/home.html
+++ b/public/home.html
@@ -1,9 +1,11 @@
+
 <!<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="stylesheet.css">
     <title> Travel Buddy </title>
+    <link rel="stylesheet" href="https://use.typekit.net/oov2wcw.css"></link>
   </head>
   <body>
     <div class = "container">
@@ -21,17 +23,23 @@
           </div>
           <div class="button_container">
             <div>
-              <button class="button" id="button_1" type="button" name="profile">Profile </button>
+              <button class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></button>
             </div>
             <div>
-              <button class="button" id="button_2" type="button" name="history">History</button>
+              <button class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></button>
             </div>
             <div>
-              <button class="button" id="button_3" type="button" name="matches"> Matches </button>
+              <button class="button" id="button_3" type="button" name="History"><span>History</span></button>
+            </div>
+            <div>
+              <button class="button" id="button_4" type="button" name="Blog"><span>Blog</span></button>
+            </div>
+            <div>
+              <button class="button" id="button_5" type="button" name="Settings"><span> Settings </span></button>
             </div>
           </div>
           <div class="sign_out_container">
-              <button class="button" id="sign_out" name="sign out" type="button">Sign Out</button>
+              <button class="button" id="sign_out" name="sign out" type="button"><span>Sign Out</span></button>
           </div>
         </div>
       </div>
