--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -65,8 +65,49 @@
       </div>
       <div class= "main_container">
         <div id="profile_container">
-          <div id="profile">
+          <div id="profile" style="margin:10%;padding:0;">
             <img src="random photo.jpg">
+          </div>
+          <div id="profile_info" style="margin:10%;">
+            <span id="full_name">Name: </span>
+            <br>
+            <span id="age">Age: </span>
+            <br>
+            <span id="location">Location: </span>
+            <br>
+            <span id="buddy_level">Buddy Level: </span>
+            <br>
+            <span id="destination">Travelling to: </span>
+          </div>
+        </div>
+
+        <div class="hobbies_list" style="background-color: white;flex: 1;display: flex;margin:0 5%;">
+          <h1 style="background-color:white;margin:0;">Hobbies:</h1>
+          <div class="">
+            <span>Hobby 1</span>
+            <p>Sports</p>
+          </div>
+
+          <div class="">
+            <span>Hobby 2</span>
+            <p>games</p>
+          </div>
+          <div class="">
+            <span>Hobby 3</span>
+            <p>Music</p>
+          </div>
+        </div>
+        <div style="background-color:white;margin:0 5%" class="bio">
+          <h1 style="background-color:white;margin:0;">Biography:</h1>
+          <p style="margin:0;padding:1% 0;">This is a sample biography...</p>
+          <br>
+        </div>
+        <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
+          <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
+            <img src="Thumb_Down.svg" style="">
+          </div>
+          <div class="dislike" style="background-color:red;flex:1;display:flex;justify-content:center;padding:3%;">
+            <img src="Thumb_Up.svg" style="transform: rotate(180deg);">
           </div>
         </div>
       </div>
