--- a/public/searching_for.html
+++ b/public/searching_for.html
@@ -37,20 +37,20 @@
           </div>
           <div class="button_container">
             <div>
-              <button class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></button>
+              <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
             </div>
             <div>
-              <button class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></button>
+              <a href="matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
             </div>
             <div>
-              <button class="button" id="button_3" type="button" name="History"><span>History</span></button>
+              <a class="button" id="button_3" type="button" name="History"><span>History</span></a>
             </div>
             <div>
-              <button class="button" id="button_4" type="button" name="Blog"><span>Blog</span></button>
+              <a class="button" id="button_4" type="button" name="Blog"><span>Blog</span></a>
             </div>
             <div>
-              <button class="button" id="button_5" type="button" name="Settings">
-                <span> Settings </span></button>
+              <a class="button" id="button_5" type="button" name="Settings">
+                <span> Settings </span></a>
             </div>
         </div>
         <div class="sign_out_container"style = "margin-top: 5%;" >
