--- a/public/searching_for.html
+++ b/public/searching_for.html
@@ -85,22 +85,22 @@
             <form id="myForm" action="formNext.php" method="post">
               <span style="color:grey; font-size:16px;text-align:center; font-weight:bold;">Gender:</span>
               <div class="gender_buttons">
-                <button type="button" class="formbutton" id="genderbutton" value="0" name="nothing" onclick="toggleGenderButtons(0);">No Preference</button>
-                <button type="button" class="formbutton" id="genderbutton1" value="male" name="male" onclick="toggleGenderButtons(1);">Male</button>
-                <button type="button" class="formbutton"  id="genderbutton2" value"female "=name="female" onclick="toggleGenderButtons(2);">Female</button>
+                <button type="button" class="formbutton" id="genderbutton" value="0" name="gender" onclick="toggleGenderButtons(0);">No Preference</button>
+                <button type="button" class="formbutton" id="genderbutton1" value="male" name="gender" onclick="toggleGenderButtons(1);">Male</button>
+                <button type="button" class="formbutton"  id="genderbutton2" value"female "=name="gender" onclick="toggleGenderButtons(2);">Female</button>
               </div>
               <span style="color:grey; font-size:16px;text-align:center; font-weight:bold;">Age:</span>
               <div class="age_buttons">
-                <button type="button" class="formbutton" id="agebutton" value="0" name="age0" onclick="toggleAgeButtons(0);">No Preference</button>
-                <button type="button" class="formbutton" id="agebutton1" value="18" name="age1" onclick="toggleAgeButtons(1);">18-25</button>
-                <button type="button" class="formbutton" id="agebutton2" value="26" name="age2" onclick="toggleAgeButtons(2);">26-33</button>
-                <button type="button" class="formbutton" id="agebutton3" value="34" name="age3" onclick="toggleAgeButtons(3);">34-40</button>
-                <button type="button" class="formbutton" id="agebutton4" value="40" name="age4" onclick="toggleAgeButtons(4);">40+</button>
+                <button type="button" class="formbutton" id="agebutton" value="0" name="age" onclick="toggleAgeButtons(0);">No Preference</button>
+                <button type="button" class="formbutton" id="agebutton1" value="18" name="age" onclick="toggleAgeButtons(1);">18-25</button>
+                <button type="button" class="formbutton" id="agebutton2" value="26" name="age" onclick="toggleAgeButtons(2);">26-33</button>
+                <button type="button" class="formbutton" id="agebutton3" value="34" name="age" onclick="toggleAgeButtons(3);">34-40</button>
+                <button type="button" class="formbutton" id="agebutton4" value="40" name="age" onclick="toggleAgeButtons(4);">40+</button>
               </div>
               <span style="color:grey; font-size:16px;text-align:center; font-weight:bold;">Nationality:</span>
               <div class="nationality_buttons">
-                <button type="button" class="formbutton" id="nationbutton" value="0" name="nochoice" onclick="toggleNationButtons(0);">No Preference</button>
-                <button type="button" class="formbutton" id="nationbutton1" name="choice" onclick="toggleNationButtons(1);">Same Nationality</button>
+                <button type="button" class="formbutton" id="nationbutton" value="0" name="nation" onclick="toggleNationButtons(0);">No Preference</button>
+                <button type="button" class="formbutton" id="nationbutton1" name="nation" onclick="toggleNationButtons(1);">Same Nationality</button>
               </div>
               <span style="color:grey; font-size:16px;text-align:center; font-weight:bold;">Hobbies:</span>
               <div class="hobbies_list">
