--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -37,22 +37,22 @@
           </div>
           <div class="button_container">
             <div>
-              <button class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></button>
-            </div>
-            <div>
-              <button class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_3" type="button" name="History"><span>History</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_4" type="button" name="Blog"><span>Blog</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_5" type="button" name="Settings">
-                <span> Settings </span></button>
-            </div>
-        </div>
+             <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+           </div>
+           <div>
+             <a href= "matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
+           </div>
+           <div>
+             <a class="button" id="button_3" type="button" name="History"><span>History</span></a>
+           </div>
+           <div>
+             <a class="button" id="button_4" type="button" name="Blog"><span>Blog</span></a>
+           </div>
+           <div>
+             <a class="button" id="button_5" type="button" name="Settings">
+               <span> Settings </span></a>
+           </div>
+          </div>
         <div class="sign_out_container"style = "margin-top: 5%;" >
            <div class="back-to-exp-link">
              <span>Back to</span>
