--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -107,7 +107,7 @@
             <img src="Thumb_Down.svg" style="">
           </div>
           <div class="dislike" style="background-color:red;flex:1;display:flex;justify-content:center;padding:3%;">
-            <img src="Thumb_Up.svg" style="transform: rotate(180deg);">
+            <img src="Thumb_Up.svg" href="mikey.html" style="transform: rotate(180deg);">
           </div>
         </div>
       </div>
