--- a/public/mikey.html
+++ b/public/mikey.html
@@ -37,10 +37,10 @@
           </div>
           <div class="button_container">
             <div>
-              <a href="#" class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+              <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
             </div>
             <div>
-              <a class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
+              <a href="matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
             </div>
             <div>
               <a class="button" id="button_3" type="button" name="History"><span>History</span></a>
@@ -77,7 +77,6 @@
 !</h1>
 </div>
 </div>
-        <div class = "bubble">
           <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
             <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
               <img src="Thumb_Down.svg" style="">
