--- a/public/searching_for.html
+++ b/public/searching_for.html
@@ -40,7 +40,7 @@
              <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
            </div>
            <div>
-             <a href= "mikey.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
+             <a href= "matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
            </div>
            <div>
              <a class="button" id="button_3" type="button" name="History"><span>History</span></a>
