update various files

--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -37,7 +37,7 @@
           </div>
           <div class="button_container">
             <div>
-             <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+             <a href= "profile.html" class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
            </div>
            <div>
              <a href= "matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
@@ -64,22 +64,25 @@
         </div>
       </div>
       <div class= "main_container">
-        <div id="profile_container">
-          <div id="profile" style="margin:10%;padding:0;">
-            <img src="random photo.jpg">
-          </div>
-          <div id="profile_info" style="margin:10%;">
-            <span id="full_name">Name: </span>
-            <br>
-            <span id="age">Age: </span>
-            <br>
-            <span id="location">Location: </span>
-            <br>
-            <span id="buddy_level">Buddy Level: </span>
-            <br>
-            <span id="destination">Travelling to: </span>
-          </div>
-        </div>
+          <div id="profile_container" style="border-radius: 10px;">
+              <div id="profile" style="margin:10%;padding:0;border: 4px solid grey; border-radius: 10px;">
+                <img src="random photo.jpg">
+              </div>
+              <div id="profile_info" style="margin:7%;">
+                <br>
+                <span id="Profile" style="font-size:35px;font-weight: bold;">Matching Process <br><br></span>
+                <br>
+                <span id="full_name">Name: <br></span>
+                <br>
+                <span id="age">Age: <br></span>
+                <br>
+                <span id="location">Location: <br></span>
+                <br>
+                <span id="buddy_level">Buddy Level: <br></span>
+                <br>
+                <span id="destination">Travelling to: <br></span>
+              </div>
+            </div>
 
         <div class="hobbies_list" style="background-color: white;flex: 1;display: flex;margin:0 5%;">
           <h1 style="background-color:white;margin:0;">Hobbies:</h1>
