--- a/public/searching_for.html
+++ b/public/searching_for.html
@@ -37,7 +37,7 @@
           </div>
           <div class="button_container">
             <div>
-             <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+             <a href= "profile.html" class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
            </div>
            <div>
              <a href= "matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
@@ -87,7 +87,7 @@
               <div class="gender_buttons">
                 <button type="button" class="formbutton" id="genderbutton" value="0" name="gender" onclick="toggleGenderButtons(0);">No Preference</button>
                 <button type="button" class="formbutton" id="genderbutton1" value="male" name="gender" onclick="toggleGenderButtons(1);">Male</button>
-                <button type="button" class="formbutton"  id="genderbutton2" value"female" name="gender" onclick="toggleGenderButtons(2);">Female</button>
+                <button type="button" class="formbutton"  id="genderbutton2" value="female" name="gender" onclick="toggleGenderButtons(2);">Female</button>
               </div>
               <span style="color:grey; font-size:16px;text-align:center; font-weight:bold;">Age:</span>
               <div class="age_buttons">
