--- a/public/profile.html
+++ b/public/profile.html
@@ -36,23 +36,23 @@
             </div>
           </div>
           <div class="button_container">
-            <div>
-              <button class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></button>
-            </div>
-            <div>
-              <button class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_3" type="button" name="History"><span>History</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_4" type="button" name="Blog"><span>Blog</span></button>
-            </div>
-            <div>
-              <button class="button" id="button_5" type="button" name="Settings">
-                <span> Settings </span></button>
-            </div>
-        </div>
+                <div>
+                 <a href= "profile.html" class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+               </div>
+               <div>
+                 <a href= "matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
+               </div>
+               <div>
+                 <a class="button" id="button_3" type="button" name="History"><span>History</span></a>
+               </div>
+               <div>
+                 <a class="button" id="button_4" type="button" name="Blog"><span>Blog</span></a>
+               </div>
+               <div>
+                 <a class="button" id="button_5" type="button" name="Settings">
+                   <span> Settings </span></a>
+               </div>
+             </div>
         <div class="sign_out_container"style = "margin-top: 5%;" >
            <div class="back-to-exp-link">
              <span>Back to</span>
@@ -64,20 +64,23 @@
         </div>
       </div>
       <div class= "main_container">
-        <div id="profile_container">
-          <div id="profile" style="margin:10%;padding:0;">
+        <div id="profile_container" style="border-radius: 10px;">
+          <div id="profile" style="margin:10%;padding:0;border: 4px solid grey; border-radius: 10px;">
             <img src="random photo.jpg">
           </div>
-          <div id="profile_info" style="margin:10%;">
-            <span id="full_name" style="padding-top: 20px;">Name: </span>
+          <div id="profile_info" style="margin:7%;">
             <br>
-            <span id="age">Age: </span>
+            <span id="Profile" style="font-size:35px;font-weight: bold;">Profile <br><br></span>
             <br>
-            <span id="location">Location: </span>
+            <span id="full_name">Name: <br></span>
             <br>
-            <span id="buddy_level">Buddy Level: </span>
+            <span id="age">Age: <br></span>
             <br>
-            <span id="destination">Travelling to: </span>
+            <span id="location">Location: <br></span>
+            <br>
+            <span id="buddy_level">Buddy Level: <br></span>
+            <br>
+            <span id="destination">Travelling to: <br></span>
           </div>
         </div>
 
@@ -97,10 +100,15 @@
             <p>Music</p>
           </div>
         </div>
-        <div style="background-color:white;margin:0 5%" class="bio">
-          <h1 style="background-color:white;margin:0;">Biography:</h1>
-          <p style="margin:0;padding:1% 0;">This is a sample biography...</p>
+        <div style="background-color:white;margin:0 5%; border-radius: 10px;" class="bio">
+          <h1 style="background-color:white;margin:0;"><br><br>Biography:<br></h1>
           <br>
+          <p style="margin:0;padding:1% 0;">This is a sample biography...<br></p>
+          <br>
+          <br>
+          <br>
+          <br>
+
         </div>
       </div>
     </div>
