--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -69,42 +69,45 @@
                 <img src="random photo.jpg">
               </div>
               <div id="profile_info" style="margin:7%;">
-                <br>
-                <span id="Profile" style="font-size:35px;font-weight: bold;">Matching Process <br><br></span>
-                <br>
-                <span id="full_name">Name: <br></span>
-                <br>
-                <span id="age">Age: <br></span>
-                <br>
-                <span id="location">Location: <br></span>
-                <br>
-                <span id="buddy_level">Buddy Level: <br></span>
-                <br>
-                <span id="destination">Travelling to: <br></span>
+                  <br>
+                  <span id="Profile" style="font-size:35px;font-weight: bold;">Matching Process <br><br></span>
+                  <br>
+                  <span id="full_name"><font style="font-weight: bold;">Name: </font>Daniel<br></span>
+                  <br>
+                  <span id="age"><font style="font-weight: bold;">Age: </font> 35<br></span>
+                  <br>
+                  <span id="location"><font style="font-weight: bold;">Location: </font> London, UK<br></span>
+                  <br>
+                  <span id="buddy_level"><font style="font-weight: bold;">Buddy Level: </font> 10<br></span>
+                  <br>
+                  <span id="destination"><font style="font-weight: bold;">Travelling To: </font> Barcelona, Spain<br></span>
+                </div>
               </div>
-            </div>
-
-        <div class="hobbies_list" style="background-color: white;flex: 1;display: flex;margin:0 5%;">
-          <h1 style="background-color:white;margin:0;">Hobbies:</h1>
-          <div class="">
-            <span>Hobby 1</span>
-            <p>Sports</p>
-          </div>
-
-          <div class="">
-            <span>Hobby 2</span>
-            <p>games</p>
-          </div>
-          <div class="">
-            <span>Hobby 3</span>
-            <p>Music</p>
-          </div>
-        </div>
-        <div style="background-color:white;margin:0 5%" class="bio">
-          <h1 style="background-color:white;margin:0;">Biography:</h1>
-          <p style="margin:0;padding:1% 0;">This is a sample biography...</p>
-          <br>
-        </div>
+      
+              <div class="hobbies_list" style="background-color: white;flex: 1;display: flex;margin:0 5%;">
+                <h1 style="background-color:white;margin:0;">Hobbies:</h1>
+                <div class="">
+                  <span style="font-weight: bold; border: solid grey;">Hobby 1</span>
+                  <p>Sports</p>
+                </div>
+      
+                <div class="">
+                  <span style="font-weight: bold; border: solid grey;">Hobby 2</span>
+                  <p>games</p>
+                </div>
+                <div class="">
+                  <span style="font-weight: bold; border: solid grey;">Hobby 3</span>
+                  <p>Anime</p>
+                </div>
+              </div>
+              <div style="background-color:white;margin:0 5%; border-radius: 10px;" class="bio">
+                  <h1 style="background-color:white;margin:0;"><br><br>Biography:<br></h1>
+                  <br>
+                  <p style="margin:0;padding:1% 0;">Hey I am Daniel!<br></p>
+                  <br>
+                  <br>
+                  <br>
+                  <br>
         <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
           <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
             <img src="Thumb_Down.svg" style="">
