--- a/public/profile.html
+++ b/public/profile.html
@@ -65,45 +65,46 @@
       </div>
       <div class= "main_container">
         <div id="profile_container" style="border-radius: 10px;">
-          <div id="profile" style="margin:10%;padding:0;border: 4px solid grey; border-radius: 10px;">
-            <img src="random photo.jpg">
+          <div id="profile" style="margin:10%;padding:0; border-radius: 10px;">
+            <br>
+            <img src="Profile Photo.png" style="height:200px; width: 200px;">
           </div>
           <div id="profile_info" style="margin:7%;">
             <br>
             <span id="Profile" style="font-size:35px;font-weight: bold;">Profile <br><br></span>
             <br>
-            <span id="full_name">Name: <br></span>
+            <span id="full_name"><font style="font-weight: bold;">Name: </font>Brian<br></span>
             <br>
-            <span id="age">Age: <br></span>
+            <span id="age"><font style="font-weight: bold;">Age: </font> 40<br></span>
             <br>
-            <span id="location">Location: <br></span>
+            <span id="location"><font style="font-weight: bold;">Location: </font> London, UK<br></span>
             <br>
-            <span id="buddy_level">Buddy Level: <br></span>
+            <span id="buddy_level"><font style="font-weight: bold;">Buddy Level: </font> 5<br></span>
             <br>
-            <span id="destination">Travelling to: <br></span>
+            <span id="destination"><font style="font-weight: bold;">Travelling To: </font> Barcelona, Spain<br></span>
           </div>
         </div>
 
         <div class="hobbies_list" style="background-color: white;flex: 1;display: flex;margin:0 5%;">
           <h1 style="background-color:white;margin:0;">Hobbies:</h1>
           <div class="">
-            <span>Hobby 1</span>
+            <span style="font-weight: bold; border: solid grey;">Hobby 1</span>
             <p>Sports</p>
           </div>
 
           <div class="">
-            <span>Hobby 2</span>
+            <span style="font-weight: bold; border: solid grey;">Hobby 2</span>
             <p>games</p>
           </div>
           <div class="">
-            <span>Hobby 3</span>
+            <span style="font-weight: bold; border: solid grey;">Hobby 3</span>
             <p>Music</p>
           </div>
         </div>
         <div style="background-color:white;margin:0 5%; border-radius: 10px;" class="bio">
           <h1 style="background-color:white;margin:0;"><br><br>Biography:<br></h1>
           <br>
-          <p style="margin:0;padding:1% 0;">This is a sample biography...<br></p>
+          <p style="margin:0;padding:1% 0;">Enjoying summer...<br></p>
           <br>
           <br>
           <br>
