--- a/public/mikey.html
+++ b/public/mikey.html
@@ -37,7 +37,7 @@
           </div>
           <div class="button_container">
             <div>
-              <a class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
+              <a href= "profile.html" class="button" id="button_1" type="button" name="My Profile"><span>My Profile </span></a>
             </div>
             <div>
               <a href="matches_page.html" class="button" id="button_2" type="button" name="Live Matches"><span> Live Matches</span></a>
