--- a/public/matches_page.html
+++ b/public/matches_page.html
@@ -65,8 +65,8 @@
       </div>
       <div class= "main_container">
           <div id="profile_container" style="border-radius: 10px;">
-              <div id="profile" style="margin:10%;padding:0;border: 4px solid grey; border-radius: 10px;">
-                <img src="random photo.jpg">
+              <div id="profile" style="margin:10%;padding-top:10px; border-radius: 10px;">
+                <img src="mikeyPic2.png">
               </div>
               <div id="profile_info" style="margin:7%;">
                   <br>
@@ -110,10 +110,10 @@
                   <br>
         <div class="like_dislike" style="display: flex;height:10%;margin:0 5%;">
           <div class="like" style="background-color:green;flex:1;display:flex;justify-content:center;padding:3%;border-right:2px dashed white;">
-            <img src="Thumb_Down.svg" style="">
+            <a href="mikey.html"> <img src="Thumb_Down.svg" style="width:50px;"></a>
           </div>
           <div class="dislike" style="background-color:red;flex:1;display:flex;justify-content:center;padding:3%;">
-            <img src="Thumb_Up.svg" href="mikey.html" style="transform: rotate(180deg);">
+              <a href="bad.html"> <img src="Thumb_Down.svg" style="transform: rotate(180deg);width:50px;"> </a>
           </div>
         </div>
       </div>
